fixed avatar sizes on ios device

--- a/src/components/Chat/ChatMessages/ChatMessages.scss
+++ b/src/components/Chat/ChatMessages/ChatMessages.scss
@@ -10,7 +10,8 @@
   .Avatar {
     padding-bottom: 1.5rem !important;
     img {
-      padding: 0.5rem;
+      padding: 0;
+      width: 2.6rem;
     }
   }
 }
